--- a/bestcoach-website/about.html
+++ b/bestcoach-website/about.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <h4>Emmanuel</h4>
-                    <i>Music Coach & Founder</i>
+                    <i>Music Coach [&] Founder</i>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center team mb-5">
                     <div class="position-relative overflow-hidden mb-4" style="border-radius: 100%;">
