--- a/bestcoach-website/about.html
+++ b/bestcoach-website/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>bestcoach||music</title>
+    <title>Home | Bestcoach Music</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -33,16 +33,16 @@
     <!-- Navbar Start -->
     <div class="container-fluid bg-light position-relative shadow">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-            <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-                
-                <span class="text-primary">bestcoach</span>
+            <a href="index.html" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
+                <img src="./img/WhatsApp Image 2024-12-27 at 12.32.13 AM.ico" alt="nav-logo" class="logo">
+                <span class="text-primary">besctcoach music</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="#" class="nav-item nav-link">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link active">About</a>
                     <a href="#" class="nav-item nav-link">Services</a>
                     <a href="#" class="nav-item nav-link">Gallery</a>
@@ -53,7 +53,7 @@
                             <a href="#" class="dropdown-item">Services</a>
                         </div>
                     </div>
-                    <a href="#" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 <a href="#" class="btn btn-primary px-4">Enroll Now</a>
             </div>
