modify-all-files

--- a/bestcoach-website/about.html
+++ b/bestcoach-website/about.html
@@ -337,7 +337,12 @@
         </div>
     </div>
     <!-- Footer End -->
-
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/@denserai/embed-chat@1/dist/web.min.js";
+        Chatbot.init({
+          chatbotId: "f1fc935f-c92e-4494-bb56-c6d6bfadf3a9",
+        });
+      </script>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
@@ -356,7 +361,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js"Unlock your musical potential with us! Join our vibrant community and take your skills to the next level. Whether you're a beginner or a seasoned musician, we have something for everyone. Get started today and let the music flow! 🎸🎤></script>
 </body>
 
 </html>
