--- a/bestcoach-website/gallery.html
+++ b/bestcoach-website/gallery.html
@@ -245,7 +245,12 @@
     </div>
     <!-- Footer End -->
 
-
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/@denserai/embed-chat@1/dist/web.min.js";
+        Chatbot.init({
+          chatbotId: "f1fc935f-c92e-4494-bb56-c6d6bfadf3a9",
+        });
+      </script>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
