make-changes-index-files

--- a/bestcoach-website/index.html
+++ b/bestcoach-website/index.html
@@ -630,7 +630,7 @@
                         Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-1.jpg" style="width: 70px; height: 70px;" alt="Image">
+                        <img class="rounded-circle" src="./img/NEWS1.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
                             <h5>Parent Name</h5>
                             <i>Profession</i>
@@ -643,7 +643,7 @@
                         Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-2.jpg" style="width: 70px; height: 70px;" alt="Image">
+                        <img class="rounded-circle" src="./img/NEWS2.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
                             <h5>Parent Name</h5>
                             <i>Profession</i>
@@ -656,7 +656,7 @@
                         Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-3.jpg" style="width: 70px; height: 70px;" alt="Image">
+                        <img class="rounded-circle" src="./img/NEWS3.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
                             <h5>Parent Name</h5>
                             <i>Profession</i>
@@ -669,7 +669,7 @@
                         Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-4.jpg" style="width: 70px; height: 70px;" alt="Image">
+                        <img class="rounded-circle" src="./img/NEWS4.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
                             <h5>Parent Name</h5>
                             <i>Profession</i>
