modify-index-page

--- a/bestcoach-website/index.html
+++ b/bestcoach-website/index.html
@@ -627,52 +627,57 @@
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        Are you a talented drummer with a passion for teaching? We're looking for you!
+                        🥁 Join Bestcoach Music as a Drums Coach! 🥁.
                     </div>
                     <div class="d-flex align-items-center">
                         <img class="rounded-circle" src="./img/NEWS1.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Drum Coach Vacancy</h5>
+                            <i>Apply</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        Are you a skilled pianist with a passion for teaching? We're looking for you!
+                        🎹 Join Bestcoach Music as a Piano Coach! 🎹.
+
                     </div>
                     <div class="d-flex align-items-center">
                         <img class="rounded-circle" src="./img/NEWS2.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Piano Coach Vacancy</h5>
+                            <i>Apply</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        Are you a talented bassist with a passion for teaching? We're looking for you!
+                        🎸 Join Bestcoach Music as a Bass Coach! 🎸.
                     </div>
                     <div class="d-flex align-items-center">
                         <img class="rounded-circle" src="./img/NEWS3.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Bass Coach Vacancy</h5>
+                            <i>Apply</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        Are you a talented vocalist with a passion for teaching? We're looking for you!
+                        🎤 Join Bestcoach Music as a Vocal Coach! 🎤.
                     </div>
                     <div class="d-flex align-items-center">
                         <img class="rounded-circle" src="./img/NEWS4.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Vocal Coach Vacancy</h5>
+                            <i>Apply</i>
                         </div>
                     </div>
                 </div>
