--- a/bestcoach-website/index.html
+++ b/bestcoach-website/index.html
@@ -691,8 +691,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
-                <p class="section-title px-5"><span class="px-2">Latest Blog</span></p>
-                <h1 class="mb-4">Latest Articles From Blog</h1>
+                <p class="section-title px-5"><span class="px-2">Bestcoach Music</span></p>
+                <h1 class="mb-4">Services</h1>
             </div>
             <div class="row pb-3">
                 <div class="col-lg-4 mb-4">
