--- a/bestcoach-website/class.html
+++ b/bestcoach-website/class.html
@@ -44,14 +44,17 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="class.html" class="nav-item nav-link active">Classes</a>
+                    <a href="class.html" class="nav-item nav-link active">Services</a>
                     <a href="team.html" class="nav-item nav-link">Teachers</a>
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Course Categories</a>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="single.html" class="dropdown-item">Blog Detail</a>
+                            <a href="#" class="dropdown-item">Schools</a>
+                            <a href="#" class="dropdown-item">Individuals</a>
+                            <a href="#" class="dropdown-item">Churches</a>
+                            <a href="#" class="dropdown-item">Groups</a>
+                            
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -66,11 +69,11 @@
     <!-- Header Start -->
     <div class="container-fluid bg-primary mb-5">
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-            <h3 class="display-3 font-weight-bold text-white">Our Classes</h3>
+            <h3 class="display-3 font-weight-bold text-white">Our Services</h3>
             <div class="d-inline-flex text-white">
                 <p class="m-0"><a class="text-white" href="">Home</a></p>
                 <p class="m-0 px-2">/</p>
-                <p class="m-0">Our Classes</p>
+                <p class="m-0">Our Services</p>
             </div>
         </div>
     </div>
@@ -81,8 +84,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
-                <p class="section-title px-5"><span class="px-2">Popular Classes</span></p>
-                <h1 class="mb-4">Classes for Your Kids</h1>
+                <p class="section-title px-5"><span class="px-2">Bestcoach Music</span></p>
+                <h1 class="mb-4">Bestcoach Services</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 mb-5">
@@ -174,28 +177,224 @@
     </div>
     <!-- Class End -->
 
+<!--Services-2-->
+
+ <!-- Class Start -->
+ <div class="container-fluid pt-5">
+    <div class="container">
+        <div class="text-center pb-2">
+            <p class="section-title px-5"><span class="px-2">Bestcoach Music</span></p>
+            <h1 class="mb-4">Bestcoach Services</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Drawing Class</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Language Learning</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Basic Science</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Class End -->
+
+<!--Services-3-->
+ <!-- Class Start -->
+ <div class="container-fluid pt-5">
+    <div class="container">
+        <div class="text-center pb-2">
+            <p class="section-title px-5"><span class="px-2">Bestcoach Music</span></p>
+            <h1 class="mb-4">Bestcoach Services</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Drawing Class</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Language Learning</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="card border-0 bg-light shadow-sm pb-2">
+                    <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Basic Science</h4>
+                        <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                    </div>
+                    <div class="card-footer bg-transparent py-4 px-5">
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
+                            <div class="col-6 py-1">3 - 6 Years</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
+                            <div class="col-6 py-1">40 Seats</div>
+                        </div>
+                        <div class="row border-bottom">
+                            <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
+                            <div class="col-6 py-1">08:00 - 10:00</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
+                            <div class="col-6 py-1">$290 / Month</div>
+                        </div>
+                    </div>
+                    <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Class End -->
+
+
 
     <!-- Registration Start -->
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
-                    <p class="section-title pr-5"><span class="pr-2">Book A Seat</span></p>
-                    <h1 class="mb-4">Book A Seat For Your Kid</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
+                    <p class="section-title pr-5"><span class="pr-2">Bestcoach Music</span></p>
+                    <h1 class="mb-4">Book A  Service With Us.</h1>
+                    <p>Ready to take your musical journey to the next level? Register now and become a part of our vibrant community! Fill out the form below and let's make some beautiful music together. 🎸🎤</p>
                     <ul class="list-inline m-0">
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Labore eos amet dolor amet diam</li>
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Etsea et sit dolor amet ipsum</li>
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Diam dolor diam elitripsum vero.</li>
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Best Coach Music excels in music education. 🎵</li>
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Bestcoach Music nurtures musicians. 🎵</li>
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Bestcoach Music, a BCSE-CENTRE subsidiary 🎵</li>
                     </ul>
                     <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="card border-0">
                         <div class="card-header bg-secondary text-center p-4">
-                            <h1 class="text-white m-0">Book A Seat</h1>
+                            <h1 class="text-white m-0">Special Request</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
                             <form>
@@ -207,10 +406,15 @@
                                 </div>
                                 <div class="form-group">
                                     <select class="custom-select border-0 px-4" style="height: 47px;">
-                                        <option selected>Select A Class</option>
-                                        <option value="1">Class 1</option>
-                                        <option value="2">Class 1</option>
-                                        <option value="3">Class 1</option>
+                                        <option selected>Select Service</option>
+                                        <option value="10">Sound Engineering Services</option>
+                                        <option value="11">Sound production for events</option>
+                                        <option value="12">Music Production</option>
+                                        <option value="13">Instrumentalists services</option>
+                                        <option value="14">Instruements Rentals</option>
+                                        <option value="15">Instruments Repairs</option>
+                                        <option value="16">Workshops</option>
+                                        <option value="17">Ensemble Opportunities</option>
                                     </select>
                                 </div>
                                 <div>
@@ -225,6 +429,7 @@
     </div>
     <!-- Registration End -->
 
+   
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
