--- a/bestcoach-website/class.html
+++ b/bestcoach-website/class.html
@@ -80,102 +80,6 @@
     <!-- Header End -->
 
 
-    <!-- Class Start -->
-    <div class="container-fluid pt-5">
-        <div class="container">
-            <div class="text-center pb-2">
-                <p class="section-title px-5"><span class="px-2">Bestcoach Music</span></p>
-                <h1 class="mb-4">Bestcoach Services</h1>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 mb-5">
-                    <div class="card border-0 bg-light shadow-sm pb-2">
-                        <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
-                        <div class="card-body text-center">
-                            <h4 class="card-title">Drawing Class</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
-                        </div>
-                        <div class="card-footer bg-transparent py-4 px-5">
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
-                                <div class="col-6 py-1">3 - 6 Years</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
-                                <div class="col-6 py-1">40 Seats</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
-                                <div class="col-6 py-1">08:00 - 10:00</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
-                                <div class="col-6 py-1">$290 / Month</div>
-                            </div>
-                        </div>
-                        <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-5">
-                    <div class="card border-0 bg-light shadow-sm pb-2">
-                        <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
-                        <div class="card-body text-center">
-                            <h4 class="card-title">Language Learning</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
-                        </div>
-                        <div class="card-footer bg-transparent py-4 px-5">
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
-                                <div class="col-6 py-1">3 - 6 Years</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
-                                <div class="col-6 py-1">40 Seats</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
-                                <div class="col-6 py-1">08:00 - 10:00</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
-                                <div class="col-6 py-1">$290 / Month</div>
-                            </div>
-                        </div>
-                        <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-5">
-                    <div class="card border-0 bg-light shadow-sm pb-2">
-                        <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
-                        <div class="card-body text-center">
-                            <h4 class="card-title">Basic Science</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
-                        </div>
-                        <div class="card-footer bg-transparent py-4 px-5">
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Age of Kids</strong></div>
-                                <div class="col-6 py-1">3 - 6 Years</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Total Seats</strong></div>
-                                <div class="col-6 py-1">40 Seats</div>
-                            </div>
-                            <div class="row border-bottom">
-                                <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
-                                <div class="col-6 py-1">08:00 - 10:00</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
-                                <div class="col-6 py-1">$290 / Month</div>
-                            </div>
-                        </div>
-                        <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Class End -->
 
 <!--Services-2-->
 
@@ -189,9 +93,9 @@
         <div class="row">
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/Instrument-Rentals.jpg" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Drawing Class</h4>
+                        <h4 class="card-title">Instrument Rentals</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
@@ -217,9 +121,9 @@
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/Intrumentalists-Services.jpg" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Language Learning</h4>
+                        <h4 class="card-title">Intrumentalists Services</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
@@ -245,9 +149,9 @@
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/repairs_webbanner_2048x2048.jpg" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Basic Science</h4>
+                        <h4 class="card-title">Instrument Repairs</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
@@ -287,9 +191,9 @@
         <div class="row">
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/Music-Production.jpg" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Drawing Class</h4>
+                        <h4 class="card-title">Music Production</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
@@ -315,9 +219,9 @@
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/Musical-Workshops.avif" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Language Learning</h4>
+                        <h4 class="card-title">Music Workshops</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
@@ -343,9 +247,9 @@
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
+                    <img class="card-img-top mb-2" src="./img/sound-Engineering.webp" alt="image">
                     <div class="card-body text-center">
-                        <h4 class="card-title">Basic Science</h4>
+                        <h4 class="card-title">Sound Engineering</h4>
                         <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
